[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with non-academic authors"
authors = ["Srinath Gosakan <gosakan003@gmail.com>"]
readme = "README.md"
packages = [{ include = "pubmed_paper_fetcher", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.31.0"
typer = "^0.12.3"
pydantic = "^2.11.7"
rich = "^14.0.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_paper_fetcher.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
